# pypi-template

./: README.md  pyproject.toml  setup.py
src/pypi-template/: __init__.py
